--- a/src/main/resources/templates/review/review-my-list.html
+++ b/src/main/resources/templates/review/review-my-list.html
@@ -31,38 +31,58 @@
                 </li>
             </ul>
             <div class="navbar-buttons">
-                <span th:if="${session.member != null}" class="dropdown">
+                <!-- 인증된 사용자가 있을 때만 -->
+                <span th:if="${currentUser != null}" class="dropdown">
                     <a class="btn btn-outline-secondary dropdown-toggle" href="#" role="button" id="userDropdown"
                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        안녕하세요, <b th:text="${session.member.name}"></b>님!
+                        안녕하세요,
+                        <b th:text="${currentUser.name}"></b>님!
                     </a>
                     <div class="dropdown-menu" aria-labelledby="userDropdown">
+                        <!-- ADMIN이 아닌 경우 마이페이지 링크 표시 -->
                         <a class="dropdown-item"
-                           th:href="@{/pets-care/members/{memberId}/myPage(memberId=${session.member.id})}"
-                           th:if="${session.member.role.name() != 'ADMIN'}">
+                           th:href="@{/pets-care/members/{memberId}/myPage(memberId=${currentUser.id})}"
+                           th:if="${currentUser != null and currentUser.role.name() != 'ADMIN'}">
                             마이페이지
                         </a>
 
                         <!-- PET_SITTER인 경우 -->
-                        <div th:if="${session.member.role.name() == 'PET_SITTER'}">
-                            <a class="dropdown-item" th:href="@{/pets-care/members/{sitterId}/care-available-dates?page=0&size=9(sitterId=${session.member.id})}">
+                        <div th:if="${currentUser != null and currentUser.role.name() == 'PET_SITTER'}">
+                            <a class="dropdown-item" th:href="@{/pets-care/members/{sitterId}/care-available-dates?page=0&size=9(sitterId=${currentUser.id})}">
                                 등록한 돌봄 가능 일정
                             </a>
-                            <a class="dropdown-item" th:href="@{/pets-care/members/{sitterId}/schedules?page=0&size=10(sitterId=${session.member.id})}">
+
+                            <a class="dropdown-item" th:href="@{/pets-care/members/{sitterId}/schedules?page=0&size=10(sitterId=${currentUser.id})}">
                                 나의 돌봄 일정
                             </a>
                         </div>
 
                         <!-- CUSTOMER인 경우 -->
-                        <a class="dropdown-item" th:if="${session.member.role.name() == 'CUSTOMER'}"
-                           th:href="@{/pets-care/members/{customerId}/reservations?page=0&size=10(customerId=${session.member.id})}">
+                        <a class="dropdown-item" th:if="${currentUser != null and currentUser.role.name() == 'CUSTOMER'}"
+                           th:href="@{/pets-care/members/{customerId}/reservations?page=0&size=10(customerId=${currentUser.id})}">
                             나의 예약 현황
                         </a>
+
+                        <!-- ADMIN(관리자)인 경우 -->
+                        <div th:if="${currentUser != null and currentUser.role.name() == 'ADMIN'}">
+                            <div class="dropdown-divider"></div>
+                            <h6 class="dropdown-header">관리자 메뉴</h6>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/members}">회원 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/reservations}">예약 관리</a>
+                            <a class="dropdown-item" th:href="@{/pets-care/admin/amounts}">포인트 내역 관리</a>
+                        </div>
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item text-danger" th:href="@{/pets-care/logout}">로그아웃</a>
+                        <a href="#" class="dropdown-item text-danger" onclick="event.preventDefault(); document.getElementById('logoutForm').submit();">로그아웃</a>
+
+                        <form id="logoutForm" action="/logout" method="post" style="display: none;">
+                            <!-- CSRF 토큰을 포함하도록 설정 -->
+                            <input type="hidden" name="_csrf" value="${_csrf.token}">
+                        </form>
                     </div>
                 </span>
-                <span th:if="${session.member == null}">
+
+                <!-- 로그인하지 않은 사용자에 대한 메뉴 -->
+                <span th:if="${currentUser == null}">
                     <a th:href="@{/pets-care/login}" class="btn btn-outline-primary mr-2">로그인</a>
                     <a th:href="@{/pets-care/signup}" class="btn btn-primary">회원가입</a>
                 </span>
@@ -90,7 +110,7 @@
                 </td>
             </tr>
             <tr th:each="review, iterStat : ${reviews.content}"
-                th:onclick="|window.location.href='@{${review.role.name() == 'CUSTOMER' ? '/pets-care/members/{customerId}/reservations/{reservationId}' : '/pets-care/members/{customerId}/schedules/{reservationId}'}(customerId=${session.member.id}, reservationId=${review.customerReservationId})}'|">
+                th:onclick="|window.location.href='@{${review.role.name() == 'CUSTOMER' ? '/pets-care/members/{customerId}/reservations/{reservationId}' : '/pets-care/members/{customerId}/schedules/{reservationId}'}(customerId=${currentUser.id}, reservationId=${review.customerReservationId})}'|">
                 <td th:text="${reviews.totalElements - (reviews.number * reviews.size) - iterStat.index}"></td> <!-- 내림차순으로 번호 출력 -->
                 <td th:text="${review.customerNickName}"></td>
                 <td th:text="${review.sitterName}"></td>
@@ -112,7 +132,7 @@
     <ul class="pagination justify-content-center">
         <!-- 이전 버튼 -->
         <li class="page-item" th:if="${reviews.hasPrevious()}" th:classappend="${reviews.number == 0 ? 'disabled' : ''}">
-            <a class="page-link" th:href="@{/pets-care/members/{memberId}/reviews(memberId=${session.member.id}, page=${reviews.number - 1}, size=10)}" aria-label="Previous">
+            <a class="page-link" th:href="@{/pets-care/members/{memberId}/reviews(memberId=${currentUser.id}, page=${reviews.number - 1}, size=10)}" aria-label="Previous">
                 <span aria-hidden="true">&laquo;</span>
             </a>
         </li>
@@ -120,13 +140,13 @@
         <!-- 페이지 번호 버튼 -->
         <li class="page-item" th:each="i : ${#numbers.sequence(0, reviews.totalPages - 1)}"
             th:classappend="${i == reviews.number ? 'active' : ''}">
-            <a th:href="@{/pets-care/members/{memberId}/reviews(memberId=${session.member.id}, page=${i}, size=10)}"
+            <a th:href="@{/pets-care/members/{memberId}/reviews(memberId=${currentUser.id}, page=${i}, size=10)}"
                th:text="${i + 1}" class="page-link"></a>
         </li>
 
         <!-- 다음 버튼 -->
         <li class="page-item" th:if="${reviews.hasNext()}" th:classappend="${reviews.number == reviews.totalPages - 1 ? 'disabled' : ''}">
-            <a class="page-link" th:href="@{/pets-care/members/{memberId}/reviews(memberId=${session.member.id}, page=${reviews.number + 1}, size=10)}" aria-label="Next">
+            <a class="page-link" th:href="@{/pets-care/members/{memberId}/reviews(memberId=${currentUser.id}, page=${reviews.number + 1}, size=10)}" aria-label="Next">
                 <span aria-hidden="true">&raquo;</span>
             </a>
         </li>
