--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -71,9 +71,9 @@
                         <button type="submit" class="btn btn-primary btn-block">로그인</button>
                     </form>-->
 
-                    <form action="/login" method="POST">
+                    <form id="loginForm">
                         <!-- CSRF 토큰 -->
-                        <input name="_csrf" type="hidden" value="${_csrf.token}">
+                        <input type="hidden" name="_csrf" id="csrfToken" value="${_csrf.token}">
 
                         <div class="form-group">
                             <label for="loginId">아이디</label>
@@ -96,6 +96,7 @@
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>  <!-- Full 버전 -->
 <script src="/js/login/login.js"></script>
 </body>
 </html>
