-회원 정보 페이지 CSS(+반려견 프로필 사진)

--- a/src/main/resources/static/css/profileStyle.css
+++ b/src/main/resources/static/css/profileStyle.css
@@ -170,3 +170,10 @@ ul li strong {
     margin-bottom: 20px;
 }
 
+.pet-profile-img {
+    width: 100px; /* 원하는 크기로 조정 */
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%; /* 원형 이미지 */
+    margin-bottom: 10px;
+}
