--- a/src/main/resources/templates/pet/new-pet.html
+++ b/src/main/resources/templates/pet/new-pet.html
@@ -92,7 +92,7 @@
 
 <div class="container mt-5">
     <h2 class="text-center">🐾 반려견 등록 🐾</h2>
-    <form id="addPetForm" method="post">
+    <form id="addPetForm" method="post" enctype="multipart/form-data" th:action="@{/pets-care/members/{memberId}/pets/new(memberId=${currentUser.id})}">
         <div id="petFormSections">
             <!-- 최초 한 마리 반려견 폼 -->
             <div class="pet-section">
@@ -112,6 +112,10 @@
                 <div class="form-group">
                     <label for="medicalConditions">건강 상태 및 특이사항</label>
                     <textarea name="pets[0].medicalConditions" class="form-control" rows="2"></textarea>
+                </div>
+                <div class="form-group">
+                    <label for="profileImage0">프로필 이미지</label>
+                    <input type="file" name="petImages[0]" class="form-control-file" accept="image/*">
                 </div>
             </div>
         </div>
