-회원정보 페이지(+반려견 프로필 이미지)

--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -161,11 +161,16 @@
                     <h4 class="card-title">🐾 등록된 반려견</h4>
                     <ul>
                         <li th:each="pet : ${member.pets}">
+                            <!-- 반려견 프로필 이미지 -->
+                            <div th:if="${pet.profileImage != null}">
+                                <img th:src="${pet.profileImage}" alt="반려견 프로필 사진" class="pet-profile-img">
+                            </div>
+                            <br>
+
                             <strong>반려견 이름:</strong> <span th:text="${pet.name}"></span><br>
                             <strong>나이:</strong> <span th:text="${pet.age}"></span>살<br>
                             <strong>품종:</strong> <span th:text="${pet.breed}"></span><br>
                             <strong>건강 상태 및 특이사항:</strong> <span th:text="${pet.medicalConditions}"></span><br>
-<!--                            <strong>프로필 사진:</strong> <span th:text="${pet.profileImgPath}"></span><br>-->
                         </li>
                     </ul>
                     <!-- 반려견이 등록된 경우, 반려견 목록 수정 버튼과 등록 버튼 모두 보이게 함 -->
