--- a/src/main/resources/templates/pet/new-pet.html
+++ b/src/main/resources/templates/pet/new-pet.html
@@ -115,7 +115,7 @@
                 </div>
                 <div class="form-group">
                     <label for="profileImage0">프로필 이미지</label>
-                    <input type="file" name="petImages[0]" class="form-control-file" accept="image/*">
+                    <input type="file" name="pets[0].profileImage" class="form-control-file" accept="image/*">
                 </div>
             </div>
         </div>
