--- a/src/main/resources/templates/pet/edit-pet.html
+++ b/src/main/resources/templates/pet/edit-pet.html
@@ -90,7 +90,7 @@
 
 <div class="container mt-5">
     <h2 class="text-center">🐾 반려견 정보 수정 🐾</h2>
-    <form id="editPetForm" method="post">
+    <form id="editPetForm" method="post" enctype="multipart/form-data">
         <input type="hidden" name="_method" value="PUT">
 
         <!-- 등록된 반려견이 있을 경우 -->
@@ -117,6 +117,12 @@
                 <label for="medicalConditions">건강 상태 및 특이사항</label>
                 <textarea name="pets[${iterStat.index}].medicalConditions" class="form-control" rows="2" th:text="${pet.medicalConditions}"></textarea>
             </div>
+
+            <div class="form-group">
+                <label for="profileImage0">프로필 이미지</label>
+                <input type="file" name="pets[${iterStat.index}].profileImage" class="form-control-file" accept="image/*">
+            </div>
+
             <button type="button" class="btn btn-danger btn-sm delete-pet-btn" th:data-pet-id="${pet.id}">삭제</button>
         </div>
         <button th:if="${pets != null && !pets.isEmpty()}" type="submit" class="btn btn-primary">수정하기</button>
