-돌봄사 시점: 돌봄 예약 상세 정보 페이지 CSS(+반려견, 케어 로그 이미지)

--- a/src/main/resources/static/css/reservation-sitter-detail-style.css
+++ b/src/main/resources/static/css/reservation-sitter-detail-style.css
@@ -160,3 +160,11 @@ h4 {
     border: 1px solid #ddd;
     margin-top: 20px;
 }
+
+.pet-profile-img {
+    width: 100px; /* 원하는 크기로 조정 */
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%; /* 원형 이미지 */
+    margin-bottom: 10px;
+}
