--- a/src/main/resources/templates/reservation/reservation-detail.html
+++ b/src/main/resources/templates/reservation/reservation-detail.html
@@ -117,6 +117,10 @@
         <h4>🐾 예약된 반려동물</h4>
         <ul class="list-group">
             <li th:each="pet : ${reservation.pets}" class="list-group-item">
+                <!-- 반려견 프로필 이미지 -->
+                <div th:if="${pet.profileImage != null}">
+                    <img th:src="@{'/uploads/pets/' + ${pet.profileImage}}" alt="반려견 프로필 사진" class="pet-profile-img">
+                </div>
                 <strong th:text="${pet.name}"></strong>
                 (나이: <span th:text="${pet.age}"></span>세,
                 품종: <span th:text="${pet.breed}"></span>)
@@ -132,8 +136,8 @@
         <div class="care-log-list">
             <div th:each="log : ${reservation.careLogList}" class="care-log-card">
                 <h5 style="color: #3b82f6;" th:text="${log.sitterName} + '님의 기록'"></h5><br>
-                <div th:if="${log.imgPath != null}">
-                    <img th:src="@{${log.imgPath}}" alt="돌봄 이미지" class="care-log-img">
+                <div th:if="${log.image != null}">
+                    <img th:src="@{'/uploads/carelogs/' + ${log.image}}" alt="돌봄 이미지" class="care-log-img">
                 </div><br>
                 <p><strong>돌봄 유형:</strong> <span th:text="${log.careType}"></span></p>
                 <p><strong>설명:</strong> <span th:text="${log.description}"></span></p>
