-관리자 페이지 - 회원 정보 상세 조회 CSS(+회원 프로필 이미지)

--- a/src/main/resources/static/css/admin-member-detail.css
+++ b/src/main/resources/static/css/admin-member-detail.css
@@ -74,3 +74,11 @@ button {
 #backBtn:hover {
     background-color: #2980b9;
 }
+
+.pet-profile-img {
+    width: 100px; /* 원하는 크기로 조정 */
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%; /* 원형 이미지 */
+    margin-bottom: 10px;
+}
