--- a/src/main/resources/templates/careavailabledate/care-available-date-detail.html
+++ b/src/main/resources/templates/careavailabledate/care-available-date-detail.html
@@ -117,6 +117,11 @@
     <a th:href="@{/pets-care/members/{sitterId}/care-available-dates?page=0&size=9(sitterId=${currentUser.id})}" class="btn btn-secondary detail-btn-secondary">돌아가기</a>
 </div>
 
+<!-- 푸터 -->
+<footer class="text-center py-4">
+    <p>&copy; 2025 반려동물 돌봄 서비스. All rights reserved.</p>
+</footer>
+
 <!-- Bootstrap JS, Popper.js, jQuery -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
