--- a/src/main/resources/templates/member/mypage.html
+++ b/src/main/resources/templates/member/mypage.html
@@ -247,6 +247,11 @@
     </div>
 </div>
 
+<!-- 푸터 -->
+<footer class="text-center py-4">
+    <p>&copy; 2025 반려동물 돌봄 서비스. All rights reserved.</p>
+</footer>
+
 <!-- Bootstrap JS -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>  <!-- Full 버전 -->
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
