--- a/src/main/resources/templates/service-info.html
+++ b/src/main/resources/templates/service-info.html
@@ -95,9 +95,9 @@
     <div class="content">
         <img th:src="@{/images/secure-petsitting.jpg}" alt="Secure Pet Sitting" class="service-image">
         <p class="intro-text">
-            반려견 돌봄을 맡길 때, 가장 중요한 것은 바로 프라이버시와 보안입니다.
-            많은 사람들이 자신의 집에서 반려견을 맡기면 불안해할 수 있지만, 걱정하지 마세요!
-            저희 서비스는 펫시터의 집에서 반려견을 돌봄으로써 고객님이 안심할 수 있도록 도와드립니다.
+            반려견 돌봄을 맡길 때, 가장 중요한 것은 바로 프라이버시와 보안입니다. <br>
+            많은 사람들이 자신의 집에서 반려견을 맡기면 불안해할 수 있지만, 걱정하지 마세요! <br>
+            저희 서비스는 펫시터의 집에서 반려견을 돌봄으로써 고객님이 안심할 수 있도록 도와드립니다. <br>
         </p>
     </div>
 
@@ -106,9 +106,9 @@
         <div class="content">
             <img th:src="@{/images/pet-sitter-home.jpg}" alt="Pet Sitter's Home" class="feature-image">
             <p>
-                저희 펫시터의 집은 반려동물이 편안하고 안전하게 지낼 수 있는 환경으로 꾸며져 있습니다.
-                고객님의 반려견은 펫시터의 따뜻한 집에서 집과 같은 편안함을 느낄 수 있습니다.
-                더 이상 자택에서 맡기는 것에 대한 걱정을 하지 않으셔도 됩니다.
+                저희 펫시터의 집은 반려동물이 편안하고 안전하게 지낼 수 있는 환경으로 꾸며져 있습니다. <br>
+                고객님의 반려견은 펫시터의 따뜻한 집에서 집과 같은 편안함을 느낄 수 있습니다. <br>
+                더 이상 자택에서 맡기는 것에 대한 걱정을 하지 않으셔도 됩니다. <br>
             </p>
         </div>
     </div>
@@ -149,9 +149,9 @@
 
     <div class="assurance-section">
         <h3 class="sub-title">안전한 돌봄을 보장합니다</h3>
-        <p>저희 서비스는 고객님이 언제든지 반려견의 상태를 확인할 수 있는 서비스를 제공합니다.
-            만약 부적절한 활동을 하는 펫시터를 발견하셨다면,
-            신고를 통해 해당 펫시터의 이용을 제한하거나 탈퇴를 요청할 수 있습니다.
+        <p>저희 서비스는 고객님이 언제든지 반려견의 상태를 확인할 수 있는 서비스를 제공합니다. <br>
+            만약 부적절한 활동을 하는 펫시터를 발견하셨다면, <br>
+            신고를 통해 해당 펫시터의 이용을 제한하거나 탈퇴를 요청할 수 있습니다. <br>
             저희는 안전과 신뢰를 최우선으로 생각합니다.</p>
         <img th:src="@{/images/secure-care.jpg}" alt="Secure Care" class="assurance-image">
     </div>
