--- a/src/main/resources/templates/main.html
+++ b/src/main/resources/templates/main.html
@@ -103,7 +103,7 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h5 class="card-title">펫시터의 집에서 돌봄을!</h5>
-                    <p class="card-text">우리집 방문 프라이버시의 걱정없이 펫시터의 집에서 돌봄을 안심하고 맡겨보세요!</p>
+                    <p class="card-text">우리집 방문 프라이버시의 걱정없이 <br> 펫시터의 집에서 돌봄을 안심하고 맡겨보세요!</p>
                     <a th:href="@{/pets-care/sitter}" class="btn btn-primary">자세히 보기</a>
                 </div>
             </div>
@@ -112,7 +112,7 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h5 class="card-title">고양이 돌봄 서비스</h5>
-                    <p class="card-text">우리 고양이를 편안하고 안전하게 돌봐줄 전문가를 만나보세요!</p>
+                    <p class="card-text">우리 고양이를 편안하고 안전하게 돌봐줄 <br> 전문가를 만나보세요!</p>
                     <a th:href="@{/pets-care/cat-care}" class="btn btn-primary">자세히 보기</a>
                 </div>
             </div>
@@ -121,7 +121,7 @@
             <div class="card mb-4">
                 <div class="card-body">
                     <h5 class="card-title">어떤 분들이 활동하고 있나요?</h5>
-                    <p class="card-text">반려동물을 사랑하는 마음은 물론, 반려동물 관련 자격증 또는 전문 지식을 갖춘 분들이 전문 펫시터로 활동하고 있습니다!</p>
+                    <p class="card-text">반려동물을 사랑하는 마음은 물론, 반려동물 관련 자격증 또는 전문 지식을 갖춘 분들이 <br> 전문 펫시터로 활동하고 있습니다!</p>
                     <a th:href="@{/pets-care/sitters-information}" class="btn btn-primary">자세히 보기</a>
                 </div>
             </div>
