-펫시터 서비스 소개 페이지

--- a/src/main/resources/templates/intro.html
+++ b/src/main/resources/templates/intro.html
@@ -135,7 +135,7 @@
         <div class="col-md-4 step">
             <div class="step-circle">1</div>
             <h4>펫시터 검색</h4>
-            <p>펫시터의 정보와 고객들의 실제 후기를 보고 원하는 펫시터를 선택하세요.</p>
+            <p>펫시터의 정보와 고객들의 실제 후기를 보고 <br> 원하는 펫시터를 선택하세요.</p>
         </div>
         <div class="col-md-4 step">
             <div class="step-circle">2</div>
@@ -145,7 +145,7 @@
         <div class="col-md-4 step">
             <div class="step-circle">3</div>
             <h4>안심 돌봄</h4>
-            <p>우리집 방문 프라이버시의 걱정없이 펫시터의 집에서 돌봄을 안심하고 맡기고, 반려동물의 케어를 실시간으로 확인하세요.</p>
+            <p>우리집 방문 프라이버시의 걱정 없이 펫시터의 집에서 <br> 돌봄을 맡기고, 실시간으로 반려동물의 케어를 확인하세요.</p>
         </div>
     </div>
 </section>
